baml_language/crates/baml_tests/snapshots/diagnostic_errors/self_in_body/baml_tests__diagnostic_errors__self_in_body__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
class user.Box {
  v: T
}
function user.bind_self(self: ?, other: Self) -> bool  [expr] {
  { let a: Self = other } true
}
function user.check(self: ?, other: Self) -> bool  [expr] {
  {  } other is Self
}
function user.describe(self: ?) -> string  [expr] {
  {  } reflect.type_of().to_string()
}
function user.is_self(self: ?, other: user.Box<int> | user.Box<string>) -> bool  [expr] {
  {  } other is Self
}
function user.let_self(self: ?, other: user.Box<int>) -> int  [expr] {
  { let a: Self = other } 1
}
function user.nested_self(self: ?, w: user.Box<Self>) -> int  [expr] {
  {  } match (w) { s: user.Box<Self> => 1, _ => 0 }
}
function user.turbofish_self(self: ?) -> string  [expr] {
  {  } reflect.type_of().to_string()
}
function user.which(self: ?, other: user.Box<int> | user.Box<string>) -> string  [expr] {
  {  } match (other) { s: Self => "self", _ => "other" }
}
