baml_language/crates/baml_tests/snapshots/diagnostic_errors/self_in_body/baml_tests__diagnostic_errors__self_in_body__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
class user.Box {
  v: T
}
function user.Box.which(self: user.Box<T>, other: user.Box<int> | user.Box<string>) -> string throws never {
  { : "self" | "other"
    match (other : user.Box<int> | user.Box<string>) : "self" | "other"
      s: Self =>
        "self" : "self"
      _ =>
        "other" : "other"
  }
  !! 1157..1161: unresolved type: Self
  !! 1157..1161: unresolved type: Self
}
function user.Box.is_self(self: user.Box<T>, other: user.Box<int> | user.Box<string>) -> bool throws never {
  { : bool
    other is Self : bool
  }
  !! 1300..1304: unresolved type: Self
  !! 1300..1304: unresolved type: Self
}
function user.Box.let_self(self: user.Box<T>, other: user.Box<int>) -> int throws never {
  { : 1
    let a: Self = other : user.Box<int>
    1 : 1
  }
  !! 1380..1384: unresolved type: Self
}
function user.Box.nested_self(self: user.Box<T>, w: user.Box<!error>) -> int throws never {
  { : 1 | 0
    match (w : user.Box<user.Box<T>>) : 1 | 0
      s: Box<Self> =>
        1 : 1
      _ =>
        0 : 0
  }
  !! 1503..1512: unresolved type: Self
}
function user.Box.turbofish_self(self: user.Box<T>) -> string throws never {
  { : string
    reflect.type_of<Self>().to_string() : string
  }
  !! 1609..1632: unresolved type: Self
}
function user.Tester.check(self: user.Tester, other: Self) -> bool throws never {
  { : bool
    other is Self : bool
  }
}
function user.Tester.describe(self: user.Tester) -> string throws never {
  { : string
    reflect.type_of<Self>().to_string() : string
  }
}
function user.Tester.bind_self(self: user.Tester, other: Self) -> bool throws never {
  { : true
    let a: Self = other : Self
    true : true
  }
}
class user.Box$stream {
  v: T | null
}
