baml_language/crates/baml_tests/snapshots/diagnostic_errors/self_in_body/baml_tests__diagnostic_errors__self_in_body__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== COMPILER2 DIAGNOSTICS ===
  [type] E0002

  × unresolved type: Self
    ╭─[main.baml:20:20]
 20 │             let s: Self => "self",
    ·                    ────
    ╰────

  [type] E0002

  × unresolved type: Self
    ╭─[main.baml:25:18]
 25 │         other is Self
    ·                  ────
    ╰────

  [type] E0002

  × unresolved type: Self
    ╭─[main.baml:28:16]
 28 │         let a: Self = other;
    ·                ────
    ╰────

  [type] E0002

  × unresolved type: Self
    ╭─[main.baml:33:20]
 33 │             let s: Box<Self> => 1,
    ·                    ─────────
    ╰────

  [type] E0002

  × unresolved type: Self
    ╭─[main.baml:38:9]
 38 │         reflect.type_of<Self>().to_string()
    ·         ───────────────────────
    ╰────
